# modular-agent-voicevox

./: .gitignore  Cargo.toml  LICENSE_APACHE-2.0  LICENSE_MIT  README.md  README_ja.md
src/: lib.rs  tts.rs
