[package]
name = "modular-agent-voicevox"
version = "0.1.0"
description = "VoiceVox TTS Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.22.1"
modular-agent-core = "0.23.1"
reqwest = { version = "0.12.25", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
