[package]
name = "modular-agent-voicevox"
version = "0.3.0"
description = "VoiceVox TTS Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.22.1"
modular-agent-core = "0.23.1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls"]

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
